--- a/lib/forall_web/templates/layout/app.html.eex
+++ b/lib/forall_web/templates/layout/app.html.eex
@@ -12,13 +12,13 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <header class="header">
         <nav class="navbar navbar-expand-lg navbar-light">
           <a class="navbar-brand" href="/">
             <img src="/images/az_icon.jpg" width="250" height="" alt="">
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" 
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
                   aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
