--- a/lib/forall_web/templates/donate/index.html.eex
+++ b/lib/forall_web/templates/donate/index.html.eex
@@ -1,13 +1,104 @@
-<div class="row" style="min-width: 1028px;">
-  <div class="col john812">
-      <div id="j812">I am the Light of the World</div>
-      <div id="john812">John 8:12</div>
+<div class="row justify-content-center align-items-center donate_sponsor" style="min-width: 1028px;">
+  <div class="col-lg-6">
+      <div id="donate_barley_title">DONATE</div>
+      <div id="donate_barley_text" class="mt-4">
+        There’s so much to do - so many people to help.
+        Become a Sponsor Today!
+      </div>
   </div>
 </div>
-<div class="row" style="min-width: 1028px;">
-  <div class="col mark1615">
-    <div id="m1615">
-      He said to them: "Go into all the World and Preach the Gospel to all Creation".
+
+<div class="row justify-content-center mt-4">
+    <div class="col-10">
+      <div class="card-group">
+        <div class="card donate">
+          <div class="card-body text-center">
+            <h5 class="card-title donate">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="10 20 179.99998474121094 160" role="img" preserveAspectRatio="xMidYMid meet" style="stroke-width: 3px; width: 45px; height: 53px;">
+              <g>
+                <path d="M169.9 143.7l16.4-13.7-25.8-17.6c1.8-2.8 4.5-7.3 6.5-11.4.3-.6 2.6-5.8 3.7-9.4 2.3-7.5 3.4-14.4 3.4-21.2 0-27.7-21.7-50.3-48.3-50.3C113.3 20 101 25.2 92 34.4 83.1 25.2 70.8 20 58.3 20 31.7 20 10 42.6 10 70.3c0 7 1.2 14.2 3.4 21.2.1.2 2 6.1 3.7 9.5 10.2 21.9 29.8 39.7 44.4 50.8 15.6 11.8 28.9 18.6 29.5 18.9l1 .5 1-.5c.1-.1 13.7-7 29.5-18.9 2.1-1.6 5-4 7.7-6.2l5.2 21.7 17.9-13.1 21.9 25.8 14.8-12.5-20.1-23.8zM92 166.2c-6.5-3.5-53.4-29.6-70.9-67.1V99c-1.6-3.1-3.5-8.8-3.5-8.8-2.1-6.6-3.2-13.3-3.2-19.9 0-25.3 19.7-45.9 43.8-45.9 12.1 0 23.8 5.3 32.1 14.6l1.7 1.9 1.7-1.9c8.3-9.3 20-14.6 32.1-14.6 24.2 0 43.8 20.6 43.8 45.9 0 6.3-1.1 12.9-3.2 19.9-1.1 3.5-3.5 8.9-3.5 8.9-1.5 3.2-4 7.5-6 10.8l-42-28.7 14.2 59.4C111.7 155.4 94.3 165 92 166.2zm62-18l-15.8 11.6-16.3-68.3 57.1 39-15.4 12.8 20.2 23.8-8.1 6.8-21.7-25.7z"></path>
+              </g>
+              </svg>
+              <br>
+              GIVE ONLINE
+            </h5>
+            <p class="card-text donate">
+              <hr id="hr_donate_cards">
+              This option is not available at this moment.
+              Please call for more information.
+            </p>
+          </div>
+        </div>
+        <div class="card about">
+          <div class="card-body text-center">
+            <h5 class="card-title donate">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="42.41447448730469 6 115.07774353027344 188" role="img" preserveAspectRatio="xMidYMid meet" style="stroke-width: 2px; width: 50px; height: 57px;">
+                <g>
+                  <path d="M154.8 79.3c-8.1-6-14.7.9-18.8 6.6-2.8 3.7-10.5 14.3-15 20.3l.4-83.5v-.1c-.2-2.6-2.1-7.4-8.1-7.4-6.2 0-7.9 4.9-7.9 7.5v55.1h-4.5V14.2c0-.6.1-3.5-2-5.7C97.3 6.8 95.1 6 92.3 6c-2.5 0-4.5.8-6 2.4-2.5 2.6-2.4 6.6-2.4 7l-.1 62.5H79l.1-55c0-.5.1-3.2-1.8-5.3-1.4-1.5-3.4-2.3-6-2.3-2.4 0-4.4.7-5.8 2.2-2.2 2.2-2.2 5.3-2.2 5.4l.1 55h-4l.1-40.7v-.1c-.2-2.6-1.9-7.5-7.5-7.5-4.7 0-7.9 3.9-7.9 7.6 0 .6-.1 5.8-.3 13.1-.6 27.5-1.7 84.6-1.3 90.9.6 8.3 9.1 20.8 14.9 24V194H107v-29.4c1.9-2.6 15.7-21.5 27.8-38.6l.6-.8c14.5-20.3 28-39.6 19.4-45.9zm-5 17.4c-4.2 7.8-10.8 17.3-17.3 26.4l-.6.8c-12.5 17.7-26.5 36.9-28.1 39l-.4.5v26.9H61.2v-27.6l-1.2-.4c-4.5-1.5-13.2-14.1-13.7-21.4-.4-6.2.8-65.4 1.3-90.6.2-7.5.3-12.5.3-13.2 0-1.9 1.7-3.9 4.2-3.9 3.3 0 3.7 3.3 3.8 4l-.1 44.3H67l-.1-58.7s0-1.7 1.1-2.8c.7-.7 1.8-1.1 3.2-1.1 1.5 0 2.6.4 3.3 1.1 1 1 .9 2.6.9 2.7l-.1 58.8h12.2l.1-66.2v-.1s-.1-2.7 1.4-4.3c.8-.8 1.8-1.2 3.3-1.2 1.7 0 3 .4 3.8 1.3 1.1 1.2 1.1 3.1 1.1 3.1v67.4H109l.1-58.7c0-.6.3-3.9 4.3-3.9 3.8 0 4.3 3.3 4.4 3.9l-.4 94.6 3.3-4.5S135 93.4 139 88.1c5.5-7.4 9.3-9 13.7-5.8 2.2 1.6 1.2 6.6-2.9 14.4z"></path>
+                  <path d="M91.6 96.2c-3.6 0-7.2 1.3-10 3.8-2.8-2.5-6.3-3.8-10-3.8-8.5 0-15.4 7.2-15.4 16 0 2.2.4 4.4 1.1 6.6.1.2.6 1.9 1.2 2.9 5.9 12.7 21.6 20.8 22.3 21.1l.8.4.8-.4c.7-.3 16.4-8.4 22.3-21.2.1-.3.8-1.8 1.1-2.9.7-2.3 1.1-4.5 1.1-6.6.1-8.7-6.8-15.9-15.3-15.9zm10.8 21.6c-.3.9-1 2.5-1 2.5-4.7 10.1-16.9 17.3-19.8 19-3-1.6-15.1-8.9-19.8-19v-.1c-.4-.7-.8-2-.9-2.4-.6-1.8-.9-3.7-.9-5.5 0-6.8 5.3-12.4 11.7-12.4 3.3 0 6.3 1.4 8.6 3.9l1.4 1.5 1.4-1.5c2.2-2.5 5.3-3.9 8.6-3.9 6.5 0 11.7 5.6 11.7 12.4-.1 1.7-.4 3.5-1 5.5z"></path>
+                  </g>
+              </svg>
+              <br>
+              BECOME A VOLUNTEER
+            </h5>
+            <p class="card-text donate">
+              <hr id="hr_donate_cards">
+              Consider giving your time to volunteer.
+              You may help the ministry by visiting nursing home patients with us or by doing some paperwork at the office.
+            </p>
+          </div>
+        </div>
+        <div class="card about">
+          <div class="card-body text-center">
+            <h5 class="card-title donate">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="33.55590481228299 14.829419877794066 290.00418768988715 353.27782864040796" role="img" preserveAspectRatio="xMidYMid meet" style="stroke-width: 5px; width: 55px; height: 67px;">
+              <g>
+                <path d="M320.253 186.435s5.5 15.5-15 32l-62.5 58s-16.5 13.5-.5 47c0 0 4.5 8.5-.5 8.5h-46.89v-72.5s-1.8-19.5 16.2-27.5c0 0 26.6-12 36.6-36.5 0 0 12.21-28 20.63-23.5 0 0 10.1 1.5.02 19 0 0-15.07 25.5-8.07 26 0 0 7.01 14 31.01-14 0 0 12.5-13.5 5-26.5 0 0-19.5-44.5-5-52 0 0 9-5.5 16 18.5l13 43.5z"></path>
+                <path d="M177.073 68.215c4.02-3 49.49-35.71 76.78-2.28 28.58 35-5.07 70.5-5.07 70.5l-71.71 69.22-71.71-69.22s-33.65-35.5-5.07-70.5c27.29-33.43 72.76-.72 76.78 2.28z"></path>
+                <path d="M145.863 231.935c18 8 16 27.5 16 27.5v72.5h-46.5c-5 0-.5-8.5-.5-8.5 16-33.5-.5-47-.5-47l-62.5-58c-20.5-16.5-15-32-15-32l13-43.5c7-24 16-18.5 16-18.5 14.5 7.5-5 52-5 52-7.5 13 5 26.5 5 26.5 24 28 31 14 31 14 7-.5-8.08-26-8.08-26-10.08-17.5 0-19 0-19 8.42-4.5 20.58 23.5 20.58 23.5 10 24.5 36.5 36.5 36.5 36.5z"></path>
+                </g>
+            </svg> 
+            <br>
+            HOW YOU CAN HELP</h5>
+            <p class="card-text donate">
+              <hr id="hr_donate_cards">
+                Please consider making a tax deductible donation to the ministry.
+                Any amount is acceptable.
+                You can mail the checks. You can stop and drop any items you no longer using that is in reasonable conditions.
+                You may donate gifts for the Christmas party at the nursing homes.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
+</div>
+
+<div class="row justify-content-center mb-5">
+  <div class="col-7">
+    <div id="donate_change_title" class="text-center">
+      Help Change Lives For The Better!  Make Your Tax Deductible Donation Today!
+    </div>
+    <div id="donate_change_text" class="text-center mt-2">
+    I thank you in advance for your prayers and financial support. I pray God’s blessings upon you and your family, thank you for considering partnering with us at this time.
+    </div>
+  </div>
+</div>
+
+<div class="row mb-4 pb-2">
+  <div class="col-1"></div>
+  <div class="col-2">
+    <img  src="/images/tony_in_prayer.webp" class="img-fluid" alt="Second slide">
+  </div>
+  <div class="col-2">
+    <img  src="/images/children_reading.webp" class="img-fluid" alt="Third slide">
+  </div>
+  <div class="col-2">
+    <img  src="/images/reading_bible.webp" class="img-fluid" alt="First slide">
+  </div>
+  <div class="col-2">
+    <img  src="/images/home_services.webp" class="img-fluid" alt="Third slide">
+  </div>
+  <div class="col-2">
+    <img  src="/images/praying_together.jpg" class="img-fluid" alt="Third slide">
   </div>
 </div>
