--- a/lib/forall_web/templates/layout/app.html.eex
+++ b/lib/forall_web/templates/layout/app.html.eex
@@ -24,7 +24,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="/">HOME <span class ="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
@@ -52,7 +52,7 @@
       </main>
 
       <footer>
-        <div class="row">
+        <div class="row p-3">
           <div class="col-2"></div>
           <div class="col-3">
             <span class="footer_title">ABOUT US</span><br><br>
