Change to refresh server.

--- a/lib/forall_web/templates/page/index.html.eex
+++ b/lib/forall_web/templates/page/index.html.eex
@@ -8,7 +8,7 @@
   <div class="col mark1615">
     <div id="mark1615_txt">
       He said to them: "Go into all the World and<br>
-      Preach the Gospel to all Creation".
+      Preach the Gospel to all Creation."
     </div>
     <div id="mark1615_ref">
       Mark 16.15
